kubernetes/longhorn/longhorn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system

  # Needed for longhorn to work on talos with its standard pod security policies
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
