kubernetes/longhorn/longhorn-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
    argocd.argoproj.io/sync-wave: "30"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
